# UkweliDB

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/workflow/: main.yaml
.github/workflows/: rust.yml
examples/land_registry/: Cargo.toml
ukweli_cli/: Cargo.toml
ukweli_cli/src/: config.rs  ledger_manager.rs  main.rs  user_store.rs
ukweli_cli/src/commands/: init.rs  mod.rs  record.rs  workflow.rs
ukweli_db/: Cargo.toml  test_db.ukweli
ukweli_db/src/: error.rs  lib.rs
ukweli_db/src/core/: ledger.rs  mod.rs  record.rs  user.rs
ukweli_db/src/entity/: mod.rs  state.rs  tracker.rs
ukweli_db/src/storage/: append.rs  database.rs  mod.rs  persitence.rs  reader.rs  recovery.rs  writer.rs
ukweli_db/src/workflow/: definition.rs  engine.rs  mod.rs  state.rs  transition.rs  validators.rs
