[package]
name = "ukweli_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
ukweli_db = {path = "../ukweli_db"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
hex = "0.4.3"
serde_yaml = "0.9.34"
